variables.RunHalf.scala.error
Erreur de compilation :
RunHalf:3: error: '(' expected but identifier found.
while (2* x != y+1 ) {avance(); if estSirBiscuit() {x=x+1} ; if estSurOrange() {y=y+1}} 
                                   ^RunHalf:3: error: illegal start of simple expression
while (2* x != y+1 ) {avance(); if estSirBiscuit() {x=x+1} ; if estSurOrange() {y=y+1}} 
                                                           ^RunHalf:3: error: '(' expected but identifier found.
while (2* x != y+1 ) {avance(); if estSirBiscuit() {x=x+1} ; if estSurOrange() {y=y+1}} 
                                                                ^RunHalf:3: error: illegal start of simple expression
while (2* x != y+1 ) {avance(); if estSirBiscuit() {x=x+1} ; if estSurOrange() {y=y+1}} 
                                                                                      ^